--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
       <script>
       
     sap.ui.getCore().attachInit(function(){
-      var text = new sap.m.Text({text:"ff"});
-      console.log(text);
-      text.placeAt(document.getElementById("content"))
-      console.log(text.getDomRef())  
+     var easyMDE = new EasyMDE({element: document.getElementById('area')});
     })
   </script>     
  <body id="content" style="margin: 0" class="sapUiBody">
+<textarea id="area"></textarea>
 </body>
 </html>
