--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 window.addEventListener('keydown', logKey);
 
 function logKey(e) {
-   var newestComment = document.createTextNode(e.target.nodeName);
+   var newestComment = document.createTextNode(e.target.className);
 document.getElementById('result').appendChild(newestComment);
   e.stopPropogation();
 }
