--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <script src="lib/script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js' data-sap-ui-theme='sap_bluecrystal' data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-bindingSyntax='complex' data-sap-ui-resourceroots='{"sap.m.sample": ""}'
-  data-sap-ui-frameOptions="trusted">
+  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'>
   </script>
   </head>
 
@@ -21,7 +20,6 @@ window.addEventListener('keydown', logKey);
 function logKey(e) {
    var newestComment = document.createTextNode(e.target.className);
 document.getElementById('result').appendChild(newestComment);
-  e.stopImmediatePropagation();
 }
     })
   </script>     
