--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="lib/script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'>
+  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js' data-sap-ui-theme='sap_bluecrystal'>
   </script>
   </head>
 
