--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script src="lib/script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js' data-sap-ui-theme='sap_goldreflection'>
+  <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-bindingSyntax='complex' data-sap-ui-resourceroots='{"sap.m.sample": ""}'
+  data-sap-ui-frameOptions="trusted" >
   </script>
   </head>
 
