--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
     sap.ui.getCore().attachInit(function(){
      var easyMDE = new EasyMDE({element: document.getElementById('area')});
-      new sap.m.Button({text:"tsljflsdkf"}).placeAt(document.getElementById("text"));
+      new sap.m.TextArea({value:"tsljflsdkf"}).placeAt(document.getElementById("text"));
 window.addEventListener('keydown', logKey);
 
 function logKey(e) {
