--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
   <script src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-libs="sap.m"
           data-sap-ui-bindingSyntax='complex' data-sap-ui-resourceroots='{"sap.m.sample": ""}'
-  data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_ux">
+  data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_bluecrystal">
   </script>
   </head>
 
