--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
     sap.ui.getCore().attachInit(function(){
       document.getElementsByClassName("sapUiTheme-sap_bluecrystal")[0].classList.toggle("sapUiTheme-sap_bluecrystal");
-      document.getElementsByClassName("sapUiMedia-StdExt-LargeDesktop")].classList.toggle("sapUiMedia-StdExt-LargeDesktop");
+      document.getElementsByClassName("sapUiMedia-StdExt-LargeDesktop")[0].classList.toggle("sapUiMedia-StdExt-LargeDesktop");
      var easyMDE = new EasyMDE({element: document.getElementById('area')});
       new sap.m.TextArea({value:"tsljflsdkf"}).placeAt(document.getElementById("text"));
 window.addEventListener('keydown', logKey);
