--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <script>
       
     sap.ui.getCore().attachInit(function(){
-      document.getElementsByClassName("sapUiMedia-StdExt-Tablet")[0].classList.toggle("sapUiMedia-StdExt-Tablet");
+      document.getElementsByClassName("sap-ios")[0].classList.toggle("sap-ios");
      /* document.getElementsByClassName("sapUiMedia-StdExt-LargeDesktop")[0].classList.toggle("sapUiMedia-StdExt-LargeDesktop");*/
      var easyMDE = new EasyMDE({element: document.getElementById('area')});
       new sap.m.TextArea({value:"tsljflsdkf"}).placeAt(document.getElementById("text"));
