--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       document.getElementsByClassName("sap-ios")[0].classList.toggle("sap-ios");
       /*document.getElementsByClassName("sapUiMedia-StdExt-Tablet")[0].classList.toggle("sapUiMedia-StdExt-Tablet");*/
        document.getElementsByClassName("sap-phone")[0].classList.toggle("sap-phone");
-       document.getElementsByClassName(" sapUiTheme-sap_bluecrystal")[0].classList.toggle("sapUiTheme-sap_bluecrystal");
+       /*document.getElementsByClassName(" sapUiTheme-sap_bluecrystal")[0].classList.toggle("sapUiTheme-sap_bluecrystal");*/
       
      /* document.getElementsByClassName("sapUiMedia-StdExt-LargeDesktop")[0].classList.toggle("sapUiMedia-StdExt-LargeDesktop");*/
      var easyMDE = new EasyMDE({element: document.getElementById('area')});
