--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <script>
       
     sap.ui.getCore().attachInit(function(){
-      document.getElementsByClassName("sap-ios")[0].classList.toggle("sap-ios");
+     /* document.getElementsByClassName("sap-ios")[0].classList.toggle("sap-ios");*/
       /*document.getElementsByClassName("sapUiMedia-StdExt-Tablet")[0].classList.toggle("sapUiMedia-StdExt-Tablet");*/
-      /* document.getElementsByClassName("sap-phone")[0].classList.toggle("sap-phone");/*
-       /*document.getElementsByClassName(" sapUiTheme-sap_bluecrystal")[0].classList.toggle("sapUiTheme-sap_bluecrystal");*/
+       document.getElementsByClassName("sap-phone")[0].classList.toggle("sap-phone");/*
+       /*document.getElementsByClassName(" sapUiTheme-sap_bluecrystal")[0].classList.toggle("sapUiTheme-sap_bluecrystal");
       
      /* document.getElementsByClassName("sapUiMedia-StdExt-LargeDesktop")[0].classList.toggle("sapUiMedia-StdExt-LargeDesktop");*/
      var easyMDE = new EasyMDE({element: document.getElementById('area')});
