--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html> 
   <head>
-    <link rel="stylesheet" href="lib/style.css">
+    
     <script src="lib/script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
@@ -10,6 +10,11 @@
           data-sap-ui-bindingSyntax='complex' data-sap-ui-resourceroots='{"sap.m.sample": ""}'
   data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_bluecrystal">
   </script>
+    <style>
+      html.sap-phone div
+      {
+        user-select:text;
+      }</style>
   </head>
 
   
