--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_bluecrystal">
   </script>
     <style>
-      html.sap-phone div
+      html.sap-phone *
       {
-        user-select:text;
+        user-select:text!important;
       }</style>
   </head>
 
