--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       html.sap-phone *
       {
         user-select:text!important;
+        -moz-user-select: text!important;
+        -webkit-user-select: text!important;
       }</style>
   </head>
 
