--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_bluecrystal">
   </script>
     <style>
-      html.sap-phone *
+      html.sap-phone .CodeMirror-code
       {
         user-select:text!important;
         -moz-user-select: text!important;
