--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   data-sap-ui-frameOptions="trusted" data-sap-ui-theme="sap_bluecrystal">
   </script>
     <style>
-      html.sap-phone p, html.sap-phone div, html.sap-phone ul,
-      html.sap-phone textarea, html.sap-phone input, 
+      html.sap-phone body *
       {
         user-select:text!important;
         -moz-user-select: text!important;
