--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <style>
       html.sap-phone .EasyMDEContainer *
       {
-        user-select:text!important;
-        -moz-user-select: text!important;
-        -webkit-user-select: text!important;
+        user-select:text;
+        -moz-user-select: text;
+        -webkit-user-select: text;
       }</style>
   </head>
 
